# 03-Routes-MongoDB/src/routes/v1/subcategory.routes.js
@@ -52,6 +52,10 @@ route.get('/most-products',
     subcategoryController.mostProducts
 );
 
+route.get('/average-products',
+    subcategoryController.averageProducts
+);
+
 route.get('/inactive',
     subcategoryController.inActiveSubcategory
 );
